<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/drawer_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_course_list"
            android:title="@string/drawer_classes" />
        <item
            android:id="@+id/nav_fyp"
            android:title="@string/drawer_fyp" />
    </group>

    <group android:id="@+id/drawer_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courses_completed"
            android:title="@string/drawer_courses_completed" />
        <item
            android:id="@+id/nav_courses_interested"
            android:title="@string/drawer_courses_interested" />
    </group>

    <group android:id="@+id/drawer_group_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/drawer_settings" />
    </group>

</menu>
